--- a/src/components/Resturaunts2/resturaunts.module.scss
+++ b/src/components/Resturaunts2/resturaunts.module.scss
@@ -1,55 +1,27 @@
 // /* restaurant.module.scss */
 
-// .restaurant-list-text {
-//     text-align: center;
-//   }
-  
-//   .restaurant-list-container {
-//     display: flex; /* Use Flexbox to create a grid */
-//     flex-wrap: wrap; /* Allow items to wrap to the next row when needed */
-//     max-height: 550px; /* Set a fixed height for the container */
-//     overflow-y: auto; /* Add a vertical scrollbar when needed */
-//     border: 1px solid #ccc; /* Add a border for visual clarity */
-  
-//     /* Adjust the gap between cards (optional) */
-//     gap: 2px; /* Adjust as needed */
-//   }
-  
-//   /* Define other styles for your components as needed */
-  
-/* restaurant.module.scss */
-
-// .restaurant-list-text {
-//   text-align: center;
-// }
-
-// .restaurant-list-container {
-//   display: grid; /* Use CSS Grid to create a grid */
-//   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Create a responsive grid with columns of minimum 200px width */
-//   gap: 2px; /* Adjust the gap between cards (optional) */
-//   max-height: 550px; /* Set a fixed height for the container */
-//   overflow-y: auto; /* Add a vertical scrollbar when needed */
-//   border: 1px solid #ccc; /* Add a border for visual clarity */
-
-//   /* Define other styles for your components as needed */
-// }
-
-/* restaurants.module.scss */
-
 .restaurant-list-text {
   text-align: center;
 }
 
+.parent-div {
+  overflow: hidden;
+}
+
+
 .restaurant-list-container {
-  display: grid; /* Use CSS Grid to create a grid */
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Create a responsive grid with columns of minimum 200px width */
-  gap: 2px; /* Adjust the gap between cards (optional) */
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 2px;
   max-height: 550px; /* Set a fixed height for the container */
   overflow-y: auto; /* Add a vertical scrollbar when needed */
-  border: 1px solid #ccc; /* Add a border for visual clarity */
-  margin: auto;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px;
 
-  /* Define other styles for your components as needed */
+  /* Add these styles to control grid overflow */
+  width: 100%; /* Ensure the grid takes up the entire width of its container */
+  max-width: 100%; /* Make sure it doesn't exceed the container width */
 }
 
 /* Center the form */
@@ -59,6 +31,7 @@
 
 form {
   width: 80%;
+  min-width: 350px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -81,8 +54,9 @@ input[type="text"] {
 
 button[type="submit"] {
   width: 20%;
+  min-width: 80px;
   padding: 10px;
-  background-color: #502053; /* Button background color */
+  background-color: #345F7C; /* Button background color */
   color: white; /* Button text color */
   border: none;
   border-radius: 5px;
